--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,19 +11,24 @@ bind - split-window -v -c '#{pane_current_path}'
 #set-window-option -g mode-keys vi
 bind c neww -c '#{pane_current_path}'
 
-
+#Sidebar
 set -g @sidebar-tree-command '/bin/tree -a -L 2'
+#set -g @sidebar-tree-command 'ls++ -a'
 set -g @offline_icon "offline!"
 set -g @online_icon "online"
+#set -g status-position top
 
 #status bar
-set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %d %b %r'
+set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %a %d %b %r'
+
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
+  tmux-plugins/tmux-pain-control   \
   tmux-plugins/tmux-sensible       \
+  tmux-plugins/tmux-yank           \
   tmux-plugins/tmux-sidebar        \
   tmux-plugins/tmux-open           \
   tmux-plugins/tmux-online-status  \
@@ -34,15 +39,14 @@ set -g @tpm_plugins '              \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
 
-
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
-unbind-key j
-bind-key j select-pane -D 
-unbind-key k
-bind-key k select-pane -U
-unbind-key h
-bind-key h select-pane -L
-unbind-key l
-bind-key l select-pane -R
+#unbind-key j
+#bind-key j select-pane -D 
+#unbind-key k
+#bind-key k select-pane -U
+#unbind-key h
+#bind-key h select-pane -L
+#unbind-key l
+#bind-key l select-pane -R
