--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
+bind-key -T prefix Space next-window
 
 #options
 set -g default-command "${SHELL}"
