Changed status bar

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,7 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 bind-key -T prefix Space next-window
+bind-key -T prefix Enter switch-client -n
 
 #options
 set -g default-command "${SHELL}"
@@ -20,8 +21,7 @@ set -g @online_icon "online"
 #set -g status-position top
 
 #status bar
-set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %a %d %b %r'
-
+set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %a %d %b%l:%M %p'
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
