--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,19 +21,21 @@ set -g @online_icon "online"
 #set -g status-position top
 
 #status bar
-set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %a %d %b %l:%M %p'
+set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %a %d %b %l:%M %p #{prefix_highlight}'
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '              \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-pain-control   \
-  tmux-plugins/tmux-sensible       \
-  tmux-plugins/tmux-yank           \
-  tmux-plugins/tmux-sidebar        \
-  tmux-plugins/tmux-open           \
-  tmux-plugins/tmux-online-status  \
-  tmux-plugins/tmux-sessionist     \
+set -g @tpm_plugins '                \
+  tmux-plugins/tpm                   \
+  tmux-plugins/tmux-pain-control     \
+  tmux-plugins/tmux-sensible         \
+  tmux-plugins/tmux-yank             \
+  tmux-plugins/tmux-sidebar          \
+  tmux-plugins/tmux-open             \
+  tmux-plugins/tmux-online-status    \
+  tmux-plugins/tmux-sessionist       \
+  tmux-plugins/tmux-resurrect        \
+  tmux-plugins/tmux-prefix-highlight \
 '
 # Other examples:
 # github_username/plugin_name    \
