--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,7 @@ bind-key -T prefix Enter switch-client -n
 
 #options
 set -g default-command "${SHELL}"
+#set -g default-terminal "xterm-256color"
 set -g clock-mode-style 12
 bind \ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
@@ -45,11 +46,3 @@ set -g @tpm_plugins '                \
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
-#unbind-key j
-#bind-key j select-pane -D 
-#unbind-key k
-#bind-key k select-pane -U
-#unbind-key h
-#bind-key h select-pane -L
-#unbind-key l
-#bind-key l select-pane -R
