Added Powerline Stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,16 +13,34 @@ bind \ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 #set-window-option -g mode-keys vi
 bind c neww -c '#{pane_current_path}'
+set -g status-justify left
+#setw -g window-status-format "#{pane_current_path}".
+# don't rename windows automatically
+#set-option -g allow-rename off
+# visual notification of activity in other windows
+#setw -g monitor-activity on
+#set -g visual-activity on
 
 #Sidebar
-set -g @sidebar-tree-command '/bin/tree -a -L 2'
-#set -g @sidebar-tree-command 'ls++ -a'
-set -g @offline_icon "offline!"
-set -g @online_icon "online"
-#set -g status-position top
+#set -g @sidebar-tree-command '/bin/tree -a -L 2'
+##set -g @sidebar-tree-command 'ls++ -a'
+#set -g @offline_icon "offline!"
+#set -g @online_icon "online"
+set -g status-position top
 
 #status bar
-set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %a %d %b %l:%M %p #{prefix_highlight}'
+#set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %a %d %b %l:%M %p #{prefix_highlight}'
+run-shell "powerline-daemon -q"
+source "/home/badmin/.local/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
+#set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %a %d %b %l:%M %p #{prefix_highlight}'
+#set-option -g status on
+#set-option -g status-interval 2
+#set-option -g status-utf8 on
+#set-option -g status-justify "centre"
+##set-option -g status-left-length 60
+##set-option -g status-right-length 90
+#set-option -g status-left "#(~/.config/powerline/tmux-powerline/powerline.sh left)"
+#set-option -g status-right "#(~/.config/powerline/path/to/tmux-powerline/powerline.sh right)"
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
