--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,6 +21,9 @@ set -g status-justify left
 #setw -g monitor-activity on
 #set -g visual-activity on
 
+# Allows for faster key repetition
+set -s escape-time 0
+
 #Sidebar
 #set -g @sidebar-tree-command '/bin/tree -a -L 2'
 ##set -g @sidebar-tree-command 'ls++ -a'
