made path relative

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,7 +34,7 @@ set -g status-position top
 #status bar
 #set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %a %d %b %l:%M %p #{prefix_highlight}'
 run-shell "powerline-daemon -q"
-source "~/.local/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
+source ".local/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
 #set -g status-right '#{online_status} | #(acpi | grep -o "[0-9]*%") | %a %d %b %l:%M %p #{prefix_highlight}'
 #set-option -g status on
 #set-option -g status-interval 2
